--- a/configs/ipq60xx-6.6-wifi(emmc).config
+++ b/configs/ipq60xx-6.6-wifi(emmc).config
@@ -217,3 +217,12 @@ CONFIG_ZRAM_DEF_COMP_LZORLE=y
 CONFIG_PACKAGE_jansson=y
 CONFIG_PACKAGE_kmod-lib-crc32c=y
 CONFIG_PACKAGE_kmod-nf-flow=y
+
+CONFIG_PACKAGE_samba4-server=y
+CONFIG_PACKAGE_samba4-libs=y
+CONFIG_PACKAGE_kmod-usb-printer=y
+CONFIG_PACKAGE_p910nd=y
+CONFIG_PACKAGE_luci-app-samba4=y
+CONFIG_PACKAGE_luci-app-p910nd=y
+CONFIG_PACKAGE_frpc=y
+CONFIG_PACKAGE_luci-app-frpc=y
